--- a/src/components/softwareSkills/SoftwareSkill.scss
+++ b/src/components/softwareSkills/SoftwareSkill.scss
@@ -6,13 +6,14 @@
   font-size: 3rem;
   margin-bottom: 0px;
   margin-top: 0px;
-  text-align: center;
+  text-align: left;
 }
 
 .software-skill-inline {
   display: inline-block;
   margin-right: 20px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .software-skill-inline > i {
@@ -28,4 +29,13 @@
 }
 .software-skill-inline > i:hover ~ p {
   color: $skillsColor;
+}
+
+.subTitle {
+  color: $subTitle;
+}
+
+.img-negative {
+  -webkit-filter: invert(1);
+  filter: invert(1);
 }
