--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -2,6 +2,7 @@
 
 .meter {
   height: 20px;
+  max-width: 33%;
   position: relative;
   background: $progressBarBackground;
   -moz-border-radius: 25px;
